mule-user-guide/v/3.7/internationalizing-strings.adoc
= Internationalizing Strings
:keywords: mule, esb, studio, internationalize, strings, string operations, exception messages

* <<Internationalized Messages>>
* <<Exceptions>>
* <<Using Custom Message Bundles>>
* <<Creating Message Instances from your Code>>

Mule ESB supports internationalization of exception messages and any other type of string message. Mule has support for the following Languages:

* English
* link:http://mule.mulesoft.org/display/JAPANLP/UserGuide[Japanese]

== Internationalized Messages

Mule uses the Java link:http://java.sun.com/j2se/1.4.2/docs/api/java/util/ResourceBundle.html[ResourceBundle] class to load messages from properties files on the classpath based on the current system's locale. Mule provides a full set of messages in English and link:http://mule.mulesoft.org/display/JAPANLP/UserGuide[Japanese] only, but there may be additional languages provided in the future.

Mule's internationalized messages are represented by the link:http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/config/i18n/Message.html[org.mule.config.i18n.Message] class. Instances are constructed with a message ID and zero or more message parameters. You can see a list of core messages that Mule provides in `META-INF/service/org/mule/i18n/core-messages.properties`.

You never create instances of `Message` directly. Instead, you use subclasses of link:http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/config/i18n/MessageFactory.html[MessageFactory]. The messages for Mule's core project are accessible through the link:http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/config/i18n/CoreMessages.html[org.mule.config.i18n.CoreMessages] class.

Each of Mule's modules and transports has such a messages class. Its name is equal to the module with _Messages_ appended. For example, for the JMS transport you will use `JmsMessages` to retrieve messages.

The dedicated messages class per module/transport has the following advantages:

* Encapsulation of the message code
* Client code is not cluttered with `Message` constructors
* Client code has typesafe access to its messages
* Client code is not cluttered with formatting of message parameters. Instead, you handle tihs in the module-specific messages class

== Exceptions

`MuleException` is the base class of all Mule checked exceptions and can only be constructed using internationalized messages. To create a message for an exception, you use `MuleExtension` as follows:

[source, code, linenums]
----
MuleException e = new MuleException(CoreMessages.failedToGetPooledObject());
throw e;
----

== Using Custom Message Bundles

When writing Mule extensions or applications that will use the Mule internationalization class, you can supply custom message bundles containing messages specific to your extension or application. You create a resource bundle as follows:

[source, code, linenums]
----
1=Error message one
2=Error message with 2 parameters; param {0} and param {1}
...
----

where the number is the message ID and the actual message comes after. Note that message parameters are specified using '\{0}' notation, which is standard when using the Java link:http://java.sun.com/j2se/1.4.2/docs/api/java/text/MessageFormat.html[MessageFormat] class.

The file should be named `x-messages.properties` where `x` is the identifying name for this bundle. You must place this file either in your JAR file under `META-INF/services/org/mule/i18n/x-messages.properties` or any other location on the classpath.

To access the messages of your own resource bundle, you create a subclass of `MessageFactory` as follows:

[source, java, linenums]
----
public class MyMessages extends MessageFactory
{
    // getBundlePath puts together the correct path (META-INF/services/org/mule/i18n/my-messages.properties)
    private static final String BUNDLE_PATH = getBundlePath("my");

    public static Message errorMessageOne()
    {
        return createMessage(BUNDLE_PATH, 1);
    }

    public static Message anotherErrorMessage(Object param1, Object param2)
    {
        createMessage(BUNDLE_PATH, 2, param1, param2);
    }
}
----

To load a message from this bundle, pass in the resource bundle name as follows:

[source, code, linenums]
----
Message m = MyMessages.anotherErrorMessage("one", "two");
System.out.pritln(m.toString());
----

This loads the message with ID 2 from `x-messages.properties`, formats the message with the parameters "one" and "two", and prints out the message to _System.out_ as follows:

[source]
----
Error message with 2 parameters; param one and param two
----

== Creating Message Instances from your Code

If you need `Message` instances from your custom code (e.g., from a custom transformer), you create them as follows:

[source]
----
Message myMessage = MessageFactory.createStaticMessage("Oops");
----

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
